feat: Update database connection and error handling

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-PORT="3000"
-connectionString="postgresql://andrew:@localhost:5432/message_board"
-host="localhost"
-user="andrew"
-database="message_board"
-DATABASEPORT="5432"
+PGHOST=nozomi.proxy.rlwy.net
+PGUSER=postgres
+PGDATABASE=railway
+PGPORT=56515
+PORT=3000
+DATABASE_URL=postgresql://postgres:dUBzBlhRGlrMhlGwrORZGGzxzMcngKoZ@nozomi.proxy.rlwy.net:56515/railway
+PGPASSWORD=dUBzBlhRGlrMhlGwrORZGGzxzMcngKoZ
