--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch app.js",
-    "start_db": "node db/populatedb.js"
+    "start_db": "node db/seed.js"
   },
   "repository": {
     "type": "git",
